--- a/src/main/resources/templates/plugins/git/projecttabpanels/git_jira_plugin.properties
+++ b/src/main/resources/templates/plugins/git/projecttabpanels/git_jira_plugin.properties
@@ -1,5 +1,5 @@
-no.index.error.message = The git revisions can not be displayed at the moment since the the index has not yet been built. The index will be recreated the next time the RevisionIndexService runs. If you have administrators privliges you can hasten the next time the service will run in the service section of the Administration pages.
-no.log.entries.message = There are no git log entries for this issue yet. 
+git.no.index.error.message = The git revisions can not be displayed at the moment since the the index has not yet been built. The index will be recreated the next time the RevisionIndexService runs. If you have administrators privliges you can hasten the next time the service will run in the service section of the Administration pages.
+git.no.log.entries.message = There are no git log entries for this issue yet. 
 
 git.project-tab.description = A tab showing the git commits for the project
 git.project-tab.name = Git Commits
