--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.xiplink.jira.git</groupId>
 	<artifactId>jira-git-plugin</artifactId>
-	<version>0.6.19</version>
+	<version>0.6.20</version>
 
 	<name>JIRA Git plugin Mail.Ru</name>
 	<packaging>atlassian-plugin</packaging>
@@ -89,6 +89,7 @@
     		</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.2</version>
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
@@ -100,7 +101,9 @@
 	<properties>
 		<jira.version>5.0.4</jira.version>
 		<jira.data.version>5.0</jira.data.version>
-		<amps.version>4.0</amps.version>
+        <amps.version>5.0.4</amps.version>
+     	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
 
 </project>
